[package]
name = "aig"
version = "0.2.5"
license = "MIT"
description = "Rust Aig library"
edition = "2021"
repository = "https://github.com/gipsyh/aig-rs"
authors = ["Yuheng Su <gipsyh.icu@gmail.com>"]
keywords = ["aig", "formal_method", "model_checking"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.155"
logic-form = { path = "../logic-form", version = "0.2.7" }

[build-dependencies]
cc = "1.0.99"
