[package]
name = "aig"
version = "0.3.2"
license = "MIT"
description = "Aig library in Rust"
edition = "2024"
repository = "https://github.com/gipsyh/aig-rs"
authors = ["Yuheng Su <gipsyh.icu@gmail.com>"]
keywords = ["aig", "hardware", "model_checking"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.155"
logic-form = { path = "../logic-form", version = "0.3.3" }
giputils = { path = "../giputils", version = "0.3.0" }

[build-dependencies]
cc = "1.0.99"
giputils = { path = "../giputils", version = "0.3.0" }
